Pending

  * 2021
  * ImageMagick convert --format=EPS returns Uninitialized while EPS2, EPS3,
  *   ESPF work. Using EPSF 7bit ASCII (though EPS2/3 binary is fine too).
  * Rename unused script to cdinsert-pdf-gif.pl
  * Add how to install on Linux in cdinsert-ps.pl script as comments.

2013-03-31

  4.3.0

  * New web script cdinsert-ps.pl and page cdlabelgen-form.html added.
    It now only generates .ps file, so can be hosted at any site that offers
    perl cgi support.
    No change to core cdlabelgen script and it remains at version# 4.2.0.

2012-04-15

  4.2.0

  * Support for double-depth slim DVD cases. --slim-double-case option added.
    Patch sent by Dominique Dumont dod@debian.org

  * Minor fixes:
    -y fixed to take arg -y [xoffset,]yoffset just like --page-offset

2009-11-25

  * Version still 4.1.0, no change to cdlabelgen

  * cdinsert.pl 3.21 added -sPAPERSIZE= to ps2pdf so A4 PDFs can be
    correctly created.

  * cdinsert.pl now supports "Omit title/subtitle from Cover" option.

  * Removed RPM package - using Ubuntu desktop right now, and the
    rpmbuild -ta cdlabelgen-n.n.n.tgz
    command fails at the check files stage, seems like no .rpm was created.
    So only .tgz available now.

  * cdinsert.pl comment added for fixing bug in QRcode.pm

2008-10-25

  4.1.0

  * Create covers for double-sided DVD cases that hold 6 DVDs.
    --double-case option now available, to be used with dvd-outside option.
    Thanks to Andras Salamon <asalamon@chello.hu> for this patch.

  * cdinsert.pl changed to handle new cgi_error() processing
    from CGI.pm - also don't use CGI.pm 3.15 - has bug in handling POST_MAX,
    large posts will peg CPU to 100%. And edited the .tmpl template files
    to display links to GIF/PDF/PS only if those files have size > 0 bytes.

  * 2008-11-05 Make RPM version package available, rebuilt all packages.
    

2007-08-26

  4.0.0

  * --tray-overlay option added - use this to overlay a EPS file onto the